--- a/pages/index/feature.wxml
+++ b/pages/index/feature.wxml
@@ -29,7 +29,7 @@
       <view>
         <text class="cuIcon-community" style="color:#84BD54;font-size:32px;margin-top:5px;"></text>
       </view>
-      <text>咨询建议</text>
+      <text>使用帮助</text>
     </view>
   </view>
 
