--- a/pages/course/content.wxml
+++ b/pages/course/content.wxml
@@ -104,7 +104,7 @@
                                 <text class="kb-card-place-wordsTime">{{timeRowItem.l1}}</text>
                                 <text class="kb-card-place-wordsTime">{{timeRowItem.t1}}</text>
                                 <text class="kb-card-place-wordsTime">{{timeRowItem.l2}}</text>
-                                <text class="kb-card-place-wordsTime">{{timeRowItem.t1}}</text>
+                                <text class="kb-card-place-wordsTime">{{timeRowItem.t2}}</text>
                             </view>
                         </view>
                         <view class="kb-cardTime mg-12">
@@ -157,6 +157,7 @@
                     <block>
                         <text class="kb-info-week">星期{{_days[targetDayIndex]}}</text>
                         <text class="kb-lesson-time"> </text>
+                        <view class="margin-right-sm cu-tag bg-white radius" bindtap='addCalendarNotice'>日历提醒</view>
                         <text class="kb-info-card-close cuIcon-rounddown" bindtap="hideDetail"></text>
                     </block>
                 </view>
