update V3.0.4版本： 1. 正式版&体验版、开发版自动切换API地址； 2. 图书功能可浏览OPAC系统书架； 3. 图书详情界面馆藏信息、图书信息、相关书架、同名作者书籍展示； 4. 图书检索界面列表界面优化； 5. 我的图书借阅初始密码需修改密码； 6. 关于界面自动获取线上版本号； 7. 校历界面恢复本周/下周校历安排事件;

--- a/colorui/main.wxss
+++ b/colorui/main.wxss
@@ -2817,6 +2817,10 @@ scroll-view.cu-steps .cu-item {
 	flex-basis: 20%;
 }
 
+.basis-xxs {
+	flex-basis: 30%;
+}
+
 .basis-sm {
 	flex-basis: 40%;
 }
@@ -2827,6 +2831,10 @@ scroll-view.cu-steps .cu-item {
 
 .basis-lg {
 	flex-basis: 60%;
+}
+
+.basis-llg {
+	flex-basis: 70%;
 }
 
 .basis-xl {
